<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咕噜大工</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="img">img</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="home">校园</string>
    <string name="find">发现</string>
    <string name="msg">消息</string>
    <string name="mine">我</string>
    <string name="msg_good">点赞</string>
    <string name="msg_reply">回复</string>
    <string name="hot">热门</string>
    <string name="near">附近</string>
    <string name="home_detail">帖子详情</string>
    <string name="reply">回复</string>
    <string name="mygood">我的点赞</string>
    <string name="comment">评论</string>
    <string name="add_avatar">头像</string>
    <string name="settings">设置</string>
    <string name="self_info">个人资料</string>
    <string name="self_settings">个人设置</string>
    <string name="name_settings">昵称设置</string>
    <string name="msg_settings">消息设置</string>
    <string name="sign_setting">签名设置</string>
    <string name="sex_setting">性别</string>
    <string name="loading1">正在加载中.</string>
    <string name="loading2">正在加载中..</string>
    <string name="loading3">正在加载中...</string>
    <string name="loading4">正在加载中....</string>
    <string name="near_new_card">附近发现了新的卡片</string>
    <string name="private_msg">有人发私信给我</string>
    <string name="reply_cmt_2_me">有人评论/回复我</string>
    <string name="good_2_me">有人赞我</string>
    <string name="vibrate">震动</string>
    <string name="voice">声音</string>
    <string name="interest_in">感兴趣</string>
    <string name="game_detail">活动详情</string>

    <!-- 下拉刷新和上拉加载string -->
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>

    <!-- 我的界面 -->
    <string name="auther">身份认证</string>
    <string name="gold">我的金币</string>
    <string name="note">我的帖子</string>
    <string name="gain">我的成就</string>
    <string name="collect">我的收藏</string>
    <string name="mark">我的关注</string>
    <string name="feedback">意见反馈</string>
    <string name="recmd2other">推荐给同学！</string>
    <string name="myinfo">我的资料</string>
    <string name="other_info">TA的资料</string>
    <string name="head_title_desc">该demo包含上滑悬浮头部，同时上下拉可刷新数据，可以左右滑动切换tab</string>
    <string name="empty"></string>

    <!--  -->
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="new_card">写张卡片</string>
    <string name="new_note">发个帖子</string>
    <string name="new_tucao">吐槽一下</string>
    <string name="add_title">添加标题</string>
    <string name="new_card_cnt_hint">写点什么吧，一个故事，一段奇遇，或者只是一句难忘的话</string>
    <string name="write_finish">写好了</string>
    <string name="q_card_where">那么，要把卡片放在哪里呢？</string>
    <string name="a_card_here">放在我的当前位置</string>
    <string name="a_card_poi_select">我来手动选择位置</string>
    <string name="a_card_send2marker">同时发给我关注的人</string>
    <string name="a_card_private">这是我一个人的秘密</string>
    <string name="add_new_note">新动态</string>
    <string name="new_note_hint">说点什么吧~~</string>
    <string name="set_name">昵称设置</string>
    <string name="set_sign">编辑签名</string>
    <string name="set_sex">性别</string>
    <string name="set_home">家乡</string>
    <string name="set_start_school">入学年份</string>
    <string name="set_major">专业</string>
    <string name="set_name_hint">编辑你的昵称</string>
    <string name="set_sign_hint">这个人很懒，什么也没留下</string>
    <string name="set_name_tip">昵称不超过10字</string>
    <string name="set_sign_tip">签名内容不超过40字</string>
    <string name="recent_visitor">最近访客</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="pick_img">选择图片</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="yoyo">Yo~</string>

    <!-- contentdescription -->
    <string name="forward">forward</string>
    <string name="back">back</string>
    <string name="cnt_img">cnt_img</string>
    <string name="nul">null</string>

    <!-- IM -->
    <string name="text_ack_msg">已读</string>
    <string name="save">保存</string>
    <string name="button_pushtotalk">按住说话</string>
    <string name="button_send">发送</string>
    <string name="attach_smile">表情</string>
    <string name="attach_picture">图片</string>
    <string name="attach_take_pic">拍照</string>
    <string name="attach_location">位置</string>
    <string name="attach_file">文件</string>
    <string name="user_card">名片</string>
    <string name="move_up_to_cancel">手指上滑，取消发送</string>
    <string name="release_to_cancel">松开手指，取消发送</string>
    <string name="send_fail">发送消息失败,</string>
    <string name="delete_message">删除消息</string>
    <string name="copy_message">复制消息</string>
    <string name="delete_voice">删除语音</string>
    <string name="delete_video">删除视频</string>
    <string name="delete">删除</string>
    <string name="resend">重发</string>
    <string name="confirm_resend">确认重发该信息？</string>
    <string name="connect_failuer_toast">连接不到服务器，请稍后重试</string>
    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="copy">复制</string>
    <string name="button_logout">退出登录</string>
    <string name="button_uploadlog">上传运行日志</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="clear_records">清空记录</string>
    <string name="clear_all_records">是否清空所有聊天记录？</string>
    <string name="location_recv">[%1$s的位置]</string>
    <string name="location_message">位置信息</string>
    <string name="recording_video">录制视频</string>
    <string name="location_prefix">[我的位置]</string>
    <string name="picture">[图片]</string>
    <string name="video">[视频]</string>
    <string name="file">[文件]</string>
    <string name="button_cancel">取消</string>
    <string name="button_save">保存</string>
    <string name="button_search">查找</string>
    <string name="button_add">添加</string>
    <string name="search_header">S</string>
    <string name="network_isnot_available">网络不可用</string>
    <string name="recoding_fail">录音失败，请重试！</string>
    <string name="select_contacts">选择联系人</string>
    <string name="confirm_forward_to">确定转发到：%1$s ?</string>
    <string name="logout">退出登录</string>
    <string name="logout_hint">退出后不会删除任何历史数据，下次登录依然可以使用本账号</string>
    <string name="exit_group_hint">退出后，将不再接收此群聊信息</string>
    <string name="dissolution_group_hint">退出后，此群将被解散</string>
    <string name="exit_group">退出</string>
    <string name="connect_conflict">同一帐号已在其他设备登录</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="stat_gen">初始状态</string>
    <string name="stat_sec">终止状态</string>
    <string name="stat_build">状态转换1</string>
    <string name="stat_chk_auth">状态转换2</string>
    <string name="stat_des">状态转换3</string>
    <string name="viewpager_indicator">%1$d/%2$d</string>

</resources>