<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:id="@+id/llt_bg_dialog_card2"
    android:orientation="vertical" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:id="@+id/llt_dialog_card2"
        android:background="@drawable/bg_dialog_new_card">
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#F2F2F2"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:singleLine="true"
            android:textColor="#949494"
            android:textSize="16.0dp"
            android:text="@string/q_card_where"/>
        <RadioGroup 
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="38dp"
            android:id="@+id/rg_poi"
            android:layout_height="wrap_content" >
            <RadioButton 
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="#F2F2F2"
                android:textColor="#949494"
                android:textSize="15.0dp"
                android:checked="true"
                android:id="@+id/rb_poi_here"
                android:text="@string/a_card_here"/>
            <RadioButton 
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="#F2F2F2"
                android:textColor="#949494"
                android:layout_marginTop="27dp"
                android:textSize="15.0dp"
                android:id="@+id/rb_poi_select"
                android:text="@string/a_card_poi_select"/>
        </RadioGroup>
        <RadioGroup 
            android:layout_width="match_parent"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="38dp"
            android:id="@+id/rg_rigion"
            android:layout_height="wrap_content" >
            <RadioButton 
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="#F2F2F2"
                android:textColor="#949494"
                android:textSize="15.0dp"
                android:checked="true"
                android:id="@+id/rb_send2Marker"
                android:text="@string/a_card_send2marker"/>
            <RadioButton 
                android:layout_width="match_parent"
                android:layout_height="29dp"
                android:background="#F2F2F2"
                android:textColor="#949494"
                android:layout_marginTop="27dp"
                android:textSize="15.0dp"
                android:id="@+id/rb_private"
                android:text="@string/a_card_private"/>
        </RadioGroup>
        <ImageView 
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/pic_new_card_finish"
            android:id="@+id/iv_new_card_checked"
            android:layout_marginTop="36dp"/>
        <View android:layout_width="wrap_content"
            android:layout_height="15dp"/>
    </LinearLayout>
</LinearLayout>
