<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/ui_color_gray"
        android:id="@+id/layout_main_content"></LinearLayout>
   <!--  <View 
        android:layout_above="@+id/layout_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:id="@+id/line_main_bottom_upon"
        android:background="@color/ui_color_gray"/> -->
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/transparent_bottom_menu"
        android:id="@+id/layout_main_bottom"
        android:baselineAligned="false"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/layout_home"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:id="@+id/img_home"
                android:background="@drawable/pic_home_sel"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_home"
                android:id="@+id/tv_home"
                android:textColor="@color/tv_main_bottom_sel"
                android:text="@string/home"
                android:textSize="11.0dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/layout_find"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:id="@+id/img_find"
                android:background="@drawable/pic_find_nor"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_find"
                android:text="@string/find"
                android:textSize="11.0dp"
                android:textColor="@color/tv_main_bottom_nor"
                android:id="@+id/tv_find"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/layout_msg"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:id="@+id/img_msg"
                android:background="@drawable/pic_msg_nor"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_msg"
                android:text="@string/msg"
                 android:textSize="11.0dp"
                android:textColor="@color/tv_main_bottom_nor"
                android:id="@+id/tv_msg"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/layout_mine"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="3dp"
                android:id="@+id/img_mine"
                android:background="@drawable/pic_mine_nor"/>
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_mine"
                 android:textSize="11.0dp"
                android:text="@string/mine"
                android:textColor="@color/tv_main_bottom_nor"
                android:id="@+id/tv_mine"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
        
</FrameLayout>